# shams_ai_gateway

./: COMMERCIAL.md  Contributing.md  INSPECTION_REPORT.md  MIGRATION_FROM_FRAPPE_ASSISTANT_CORE.md  MODIFICATIONS.md  README.md  commitlint.config.js  package.json  pyproject.toml
client_packages/: README.md
client_packages/claude-desktop/: BUILD.md  LICENSE  README.md  build.py  manifest.json  validate_manifest.py
client_packages/claude-desktop/server/: frappe_assistant_stdio_bridge.py
docs/: README.md
docs/api/: API_REFERENCE.md  TOOL_REFERENCE.md
docs/development/: DEVELOPMENT_GUIDE.md  EXTERNAL_APP_DEVELOPMENT.md  OAUTH_CORS_CONFIGURATION.md  PLUGIN_DEVELOPMENT.md  PRE_COMMIT_SETUP.md  RELEASE_GUIDE.md  SKILLS_DEVELOPER_GUIDE.md  TEST_CASE_CREATION_GUIDE.md
docs/getting-started/: GETTING_STARTED.md  MIGRATION_GUIDE.md
docs/getting-started/oauth/: OAUTH_CHANGELOG.md  oauth_quick_start.md  oauth_setup_guide.md
docs/guides/: CODE_EXECUTION_SECURITY.md  PLUGIN_MANAGEMENT_GUIDE.md  PYTHON_CODE_ORCHESTRATION.md  SKILLS_USER_GUIDE.md  TOOL_MANAGEMENT_GUIDE.md  prompt-templates.md
docs/internals/: INTERNALS.md  MCP_STREAMABLEHTTP_GUIDE.md  PERFORMANCE.md  TECHNICAL_DOCUMENTATION.md
docs/reference/: CAPABILITIES_REPORT.md  CHANGELOG.md
docs/reference/templates/: README.md  tool_template.py
docs/skills/: analyze_business_data.md  analyze_crm.md  analyze_hr.md  analyze_manufacturing.md  analyze_purchases.md  analyze_sales.md  audit_data_quality.md  create_dashboard_chart.md  create_document.md  delete_document.md  document_doctype.md  export_sag_skills.md  extract_file_content.md  generate_report.md  get_doctype_info.md  get_document.md  insight_v3_skill.md  list_documents.md  list_user_dashboards.md  run_database_query.md  run_python_code.md  run_workflow.md  search_doctype.md  search_documents.md  search_link.md  search_vector.md  submit_document.md  update_document.md
scripts/: run_frappe_semgrep.sh
shams_ai_gateway/: __init__.py  hooks.py  install_all_tools.py  modules.txt  patches.txt  sapi.py  startup.py
shams_ai_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shams_ai_gateway/api/: admin_api.py  admin_api1.py  oauth_cors.py  oauth_discovery.py  plugin_api.py  sag_endpoint.py  sag_endpoint1.py  test_endpoint.py
shams_ai_gateway/api/admin/: hooks.py  modules.txt  plugins.py  server.py  skills.py  skills1.py  startup.py  tools.py  tools1.py
shams_ai_gateway/api/handlers/: __init__.py  initialize.py  prompts.py  resources.py  tools.py
shams_ai_gateway/change_log/v2/: v2_0_1.md  v2_2_0.md  v2_2_2.md  v2_3_0.md  v2_3_1.md  v2_3_2.md  v2_3_3.md  v2_4_1.md  v2_4_2.md  v2_4_3.md  v2_5_0.md
shams_ai_gateway/constants/: definitions.py
shams_ai_gateway/core/: constants.py  security_config.py  tool_registry.py  tool_registry1.py
shams_ai_gateway/data/: system_prompt_categories.json  system_prompt_templates.json  system_skills.json
shams_ai_gateway/fixtures/: custom_field.json
shams_ai_gateway/local_chat/: chat_api01.py  setup.py
shams_ai_gateway/mcp/: __init__.py  server.py  server1.py  server2.py  tool_adapter.py
shams_ai_gateway/patches/: __init__.py
shams_ai_gateway/patches/v1_0/: __init__.py  cleanup_duplicate_permissions.py  (+1 more)
shams_ai_gateway/sag/: server.py
shams_ai_gateway/services/: __init__.py  __main__.py  config_reader.py
shams_ai_gateway/tests/: base_test.py  test_admin_api_permissions.py  test_audit_log.py  test_document_tools.py  test_mcp_concurrency.py  test_oauth_cors.py  test_oauth_metadata_port.py  test_prompt_template_sandbox.py  test_report_requirements_filters.py  test_report_tools.py  test_skill_file_manager.py  test_skills_hook.py  test_tool_annotations1.py  test_usage_statistics_permissions.py
shams_ai_gateway/utils/: __init__.py  audit_trail.py  auth.py  cache.py  code_execution_subprocess.py  dashboard.py  email_invite.py  enhanced_error_handling.py  execution_limits.py  logger.py  migration_hooks.py  migration_hooks1.py  migration_hooks2.py  model_warmup.py  oauth_compat.py  ocr_subprocess.py  permissions.py  plugin_manager.py  progress_streaming.py  read_only_db.py  skill_file_manager.py  skill_file_manager1.py  template_helpers.py  tool_api.py  tool_cache.py  tool_category_detector.py  user_context.py  validation.py  validators.py
templates/emails/: sag_welcome_invite.html
tests/: base_test.py  test_admin_api_permissions.py  test_analysis_tools.py  test_mcp_concurrency.py  test_metadata_tools.py  test_oauth_cors.py  test_oauth_metadata_port.py  test_prompt_template_sandbox.py  test_report_requirements_filters.py  test_search_tools.py  test_skills_hook.py  test_tool_annotations.py  test_workflow_tools.py
utils/: cache.py  dashboard.py  execution_limits.py  migration_hooks.py  model_warmup.py  oauth_compat.py  permissions.py  plugin_manager.py  template_helpers.py
(+192 files in other folders)
